--- a/get2work/index.html
+++ b/get2work/index.html
@@ -24,7 +24,11 @@
 
 <section class="audience-section">
   <div class="audience-content">
-    <h2>Audience</h2>
+    <div class="audience-image">
+      <img src="images/audience.jpeg" alt="audience">
+    </div>
+    <div class="audience-text">
+      <h2>Audience</h2>
     <p>
         Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:<br>
     </p>
@@ -33,10 +37,7 @@
         <li><strong>Entertainemt:</strong> Some visitors may come to be entertained. They are looking for engaging content, such as videos, games, or stories that captivate their attention.</li>
         <li><strong>Community:</strong> Visitors often seek a sense of community or social interaction.</li>
     </ul>
-  </div>
-  <div class="audience-image">
-    <img src="images/audience.jpeg" alt="audience">
-  </div>
+    </div>
 </section>
 
 
