--- a/get2work/index.html
+++ b/get2work/index.html
@@ -40,6 +40,23 @@
     </div>
 </section>
 
+<div class="spacer"></div> <!--White space after the audience section-->
+
+<section class="vision-section">
+  <div class="vision-content">
+    <div class="audience-image">
+      <img src="images/vision.jpeg" alt="vision / purpose">
+      <div class="vision -text">
+        <h2>Purpose</h2>
+        <p>
+          The vision or reason for this website is to help other to learn and understand this world of web developing and programming, something that could difficult we can find different ways to transform it in a easy path.<br>
+          Even if it is the beginning for me in this world, I can offer my visitors the option to have someone who knows what it is like to know nothing, and to do my best to learn and put into practice all that I have learned.<br>
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <!-- Other content of your homepage goes here -->
 
