--- a/get2work/index.html
+++ b/get2work/index.html
@@ -76,8 +76,8 @@
 </main>
 <footer>
   <p>Adonai Villalobos &copy; 2023 - Adonai Villalobos</p>
-  <p><a href="site-plan-rafting.html">Site Plan</a></p>
-  <p><a href="contactus.html">Contact Us</a></p>
+  <p><a href="site-plan.html">Site Plan</a></p>
+  <p><a href="contactme.html">Contact Me</a></p>
       <div class="social">
           <a href="https://facebook.com" target="_blank">
           <img src="images/facebook.png" alt="facebook icon">
