--- a/get2work/index.html
+++ b/get2work/index.html
@@ -14,8 +14,8 @@
     <nav>
       <ul>
         <li><a href="index.hmtl">Home</a></li>
-        <li><a href="aboutme.hmtl">About</a></li>
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="aboutme.hmtl">About Me</a></li>
+        <li><a href="courses.html">Courses</a></li>
         <li><a href="#contactme.html">Contact Me</a></li>
       </ul>
     </nav>
