--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -14,7 +14,7 @@
     <nav>
       <ul>
         <li><a href="index.hmtl">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
+        <li><a href="aboutme.html">About Me</a></li>
         <li><a href="courses.html">Courses</a></li>
         <li><a href="#contactme.html">Contact Me</a></li>
       </ul>
