--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -32,10 +32,14 @@
   <main class="content">
     <section class="about-section">
       <h2>Introduction</h2>
-      <p>Greetings, I am Adonai Villalobos, originating from a close-knit Venezuelan family, which comprises my esteemed parents, a cherished younger sister, and myself. Over the past six years, my professional journey has been rooted in the domain of Hospitality and Tourism—an arena where I have honed my skills in curating unforgettable experiences for a diverse spectrum of global travelers.</p>
-      <p>Simultaneously, my innate fascination with the ever-evolving technology sphere, particularly in the domains of web design and programming, has been an enduring facet of my life's narrative.</p
-      <p>While orchestrating seamless hospitality experiences, the allure of technology's transformative potential, specifically in the intricate arenas of web design and programming, has persistently beckoned me. The prospect of sculpting digital landscapes transcending geographical boundaries, coupled with the thrill of unraveling complex coding architecture to engineer seamless user interactions, remains a constant source of inspiration.</p>
-      <p>Navigating the intersecting realms of hospitality and technology, my pursuit is to amalgamate the proficiency garnered from my hospitality background with an unwavering enthusiasm for web design and programming. My objective is to contribute innovatively to this dynamic domain, infusing technological advancements with a touch of personalized hospitality.</p>
+      <p>Greetings,</p>
+      <p>I am Adonai Villalobos, originating from a close-knit Venezuelan family, which comprises my esteemed parents, a cherished younger sister, and myself.</p>
+      <p>Over the past six years, my professional journey has been rooted in the domain of Hospitality and Tourism—an arena where I have honed my skills in curating unforgettable experiences for a diverse spectrum of global travelers.</p>
+      <p>Simultaneously, my innate fascination with the ever-evolving technology sphere, particularly in the domains of web design and programming, has been an enduring facet of my life's narrative.</p>
+      <p>While orchestrating seamless hospitality experiences, the allure of technology's transformative potential, specifically in the intricate arenas of web design and programming, has persistently beckoned me.</p>
+      <p>The prospect of sculpting digital landscapes transcending geographical boundaries, coupled with the thrill of unraveling complex coding architecture to engineer seamless user interactions, remains a constant source of inspiration.</p>
+      <p>Navigating the intersecting realms of hospitality and technology, my pursuit is to amalgamate the proficiency garnered from my hospitality background with an unwavering enthusiasm for web design and programming.</p>
+      <p>My objective is to contribute innovatively to this dynamic domain, infusing technological advancements with a touch of personalized hospitality.</p>
       <p>This journey embodies more than professional advancement; it symbolizes a fervent dedication to cultivating impactful and user-centric digital experiences.</p>
       <p>Join me on this invigorating expedition fueled by an unquenchable thirst for knowledge, an unwavering commitment to excellence, and an earnest aspiration to redefine the nexus of technology and human interaction.</p>
     </section>
