--- a/get2work/index.html
+++ b/get2work/index.html
@@ -30,13 +30,14 @@
       <div class="audience-text">
         <h2>Audience</h2>
         <p>
-          Visitors will come to my site for various reasons, and it is essential to understand their motivations. These reasons may include:<br>
+          Hello! My name is Adonai Villalobos, and I'm thrilled to connect with you. As you delve into this brief introduction, I aim to establish a platform that resonates with your curiosity. This website serves as a conduit, inviting you into the fascinating realm of technology, specifically delving into the intricate world of web design and programming.
         </p>
-        <ul>
-          <li><strong>Information:</strong> Visitors seek relevant and valuable information. This could be educational content, news, product details, or any other data that addresses their needs or interests.</li>
-          <li><strong>Entertainment:</strong> Some visitors may come to be entertained. They are looking for engaging content, such as videos, games, or stories that captivate their attention.</li>
-          <li><strong>Community:</strong> Visitors often seek a sense of community or social interaction.</li>
-        </ul>
+        <p>
+          ave you ever wondered how to craft your inaugural webpage or the steps pivotal to its creation? Questions like these often pave the way for our exploration. Much like you, I embarked on this journey grappling with identical queries. Even today, I'm continuously navigating through these queries, discovering novel methods to unravel their solutions. It's a journey of perpetual learning, a testament to persistence and evolution.
+        </p>
+        <p>
+          his endeavor has been profoundly enriching. Uncovering latent skills and leveraging them to thrive in the technological landscape has been an incredible odyssey. I extend my hand to you as a fellow seeker of knowledge. Let's forge a symbiotic relationship; allow me the privilege to assist you in your quest for understanding. Together, we can embark on this learning expedition, embracing every challenge as an opportunity for growth.
+        </p>
       </div>
     </div>
   </section>
